# pi-voice-assistant

./: README.md  pyproject.toml
deploy/: pi-voice-assistant.service
src/pi_voice_assistant/: __init__.py  assistant.py  cli.py  commands.py  models.py  speech.py  storage.py
tests/: test_assistant.py
